exports[`transform should transform a JSX file with custom classes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "props": Object {
                "alt": "Test",
                "src": "test.png",
              },
              "type": "img",
            },
          ],
          "props": Object {
            "sm": 6,
            "xs": 12,
          },
          "type": "my-prefix.Grid.Column",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "props": Object {
                "args": Object {
                  "bool": true,
                  "foo": "bar",
                },
              },
              "type": "my-prefix.Custom1",
            },
            Object {
              "children": Array [],
              "props": Object {
                "args": Object {
                  "test": 4.2,
                },
              },
              "type": "my-prefix.Custom2",
            },
          ],
          "props": Object {
            "sm": 6,
            "xs": 12,
          },
          "type": "my-prefix.Grid.Column",
        },
      ],
      "props": null,
      "type": "my-prefix.Grid.Row",
    },
  ],
  "props": null,
  "type": "my-prefix.Container",
}
`;

exports[`transform should transform a simple JSON file 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "Hello, world!",
      ],
      "props": Object {
        "id": "heading",
      },
      "type": "h1",
    },
  ],
  "props": Object {
    "id": "test",
  },
  "type": "div",
}
`;

exports[`transform should transform a simple JSX file 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "Hello, world!",
      ],
      "props": null,
      "type": "h1",
    },
  ],
  "props": Object {
    "id": "test",
  },
  "type": "div",
}
`;

exports[`transform transform an array of elements 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "Hello, world!",
      ],
      "props": Object {
        "id": "heading1",
      },
      "type": "h1",
    },
    Object {
      "children": Array [
        "Another heading.",
      ],
      "props": Object {
        "id": "heading2",
      },
      "type": "h2",
    },
  ],
  "props": null,
  "type": "myroot",
}
`;
